@@ -95,6 +95,9 @@ If users want separate client/server settings, they can manually override the `s
 To disable the `rid` generation set the system property `solr.disableRequestId` to `true`.
 To disable the always-on trace generation set the system property `solr.alwaysOnTraceId` to `false`.
 
+=== Learning To Rank
+* The FieldValueFeature class now always uses DocValues when docValues=true is set. A LegacyFieldValueFeature class provides the prior behaviour of not using DocValues when the docValues=true and stored=true field attributes are both set.
+
 == Solr 9.3
 === Binary Releases
 * Solr now comes with two xref:deployment-guide:installing-solr.adoc#available-solr-packages[binary releases] and xref:deployment-guide:solr-in-docker.adoc#available-images[docker images], **full** and **slim**.
